--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,31 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
-    <title>TODO APP</title>
-  </head>
+<%- include('header'); -%>
   <body>
     <div class="box" id="heading">
-      <h1><%= listTitle %></h1>
+      <h1>
+        <%= listTitle %>
+      </h1>
     </div>
 
     <div class="box">
-      <% for (let i = 0; i < newlistItems.length; i++) { %>
+      <% for (let i=0; i < newlistItems.length; i++) { %>
 
-      <div class="item">
-        <input type="checkbox" />
-        <p><%= newlistItems[i] %></p>
-      </div>
+        <div class="item">
+          <input type="checkbox" />
+          <p>
+            <%= newlistItems[i] %>
+          </p>
+        </div>
 
-      <% } %>
+        <% } %>
 
-      <form class="item" action="/" method="post">
-        <input type="text" name="newItem" placeholder="Add New" autocomplete="off" />
-        <button type="submit" name="list" value=<%= listTitle %>>+</button>
-      </form>
+          <form class="item" action="/" method="post">
+            <input type="text" name="newItem" placeholder="Add New" autocomplete="off" />
+            <button type="submit" name="list" value=<%=listTitle %>>+</button>
+          </form>
     </div>
+    <%- include('footer'); -%>
   </body>
-</html>
+
+  </html>
