--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,4 +1,5 @@
 <%- include('header'); -%>
+
   <body>
     <div class="box" id="heading">
       <h1>
@@ -7,16 +8,17 @@
     </div>
 
     <div class="box">
-      <% for (let i=0; i < newlistItems.length; i++) { %>
+
+      <% newlistItems.forEach((items)=>{ %>
 
         <div class="item">
           <input type="checkbox" />
           <p>
-            <%= newlistItems[i] %>
+            <%= items.name %>
           </p>
         </div>
 
-        <% } %>
+        <% }) %>
 
           <form class="item" action="/" method="post">
             <input type="text" name="newItem" placeholder="Add New" autocomplete="off" />
