--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,7 +3,7 @@
   <body>
     <div class="box" id="heading">
       <h1>
-        <%= listTitle %>
+        Todo List
       </h1>
       <div class="click">
         <!-- Button trigger modal -->
@@ -11,60 +11,48 @@
           Pick a List
         </button>
 
-       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-body">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="myForm" action="/<%= inputData %>" method="post">
+                  <div class="form-group">
+                    <input type="text" class="form-control" id="inputData" name="inputData" placeholder="pick a list">
+                  </div>
+                  <div class="modal-footer">
+                    <button type="submit" class="btn btn-success">Go</button>
+                  </div>
+                </form>
               </div>
-              <form id="myForm" action="/submit/:inputData" method="post">
-                <div class="form-group">
-                  <input type="text" class="form-control" id="inputData" name="inputData" placeholder="Enter data">
-                </div>
-                <div class="modal-footer">
-                  <button type="submit" class="btn btn-success">Go</button>
-                </div>
-              </form>
             </div>
           </div>
         </div>
-      </div>
-      
-      <!-- Your additional scripts -->
-      <script>
-        $(document).ready(function () {
-          $('#myForm').submit(function (e) {
-            e.preventDefault();
-
-            var inputData = $('#inputData').val();
-            console.log('Submitted data:', inputData);
-
-            // Construct the dynamic URL by replacing the placeholder with the input value
-            var url = '/submit/' + encodeURIComponent(inputData);
-
-            $.ajax({
-              url: url,
-              type: 'POST',
-              contentType: 'application/json',
-              data: JSON.stringify({ inputData: inputData }),
-              success: function (response) {
-                console.log('Response:', response);
-              },
-              error: function (error) {
-                console.log('Error:', error);
-              }
-            });
-
-            $('#exampleModal').modal('hide');
-          });
-        });
-      </script>
-
 
       </div>
     </div>
+
+    <script>
+      const form = document.querySelector("#myForm");
+
+      // Add an event listener for the submit event
+      form.addEventListener("submit", (event) => {
+        // Prevent the default form submission behavior
+        event.preventDefault();
+
+        // Get the value of the form input with the name attribute set to "inputData"
+        let inputData = form.elements["inputData"].value;
+
+        // Update the action attribute of the form element with the value of inputData
+        form.action = `${inputData}`;
+
+        // Submit the form
+        form.submit();
+      });
+    </script>
 
     <div class="box">
       <% newlistItems.forEach((item)=>{ %>
